Updates from Overleaf

--- a/localbibliography.bib
+++ b/localbibliography.bib
@@ -2341,7 +2341,7 @@ url={https://www.destatis.de/DE/Themen/Gesellschaft-Umwelt/Gesundheit/Behinderte
 	editor = {Grewendorf, Günther and Weiß,Helmut},
 	pages = {23--50},
 	publisher = {John Benjamins},
-	title = {Syntactic and phonological properties of wh-operators and wh-movement in {{Bavarian}}},
+	title = {Syntactic and phonological properties of wh-operators and wh-movement in {Bavarian}},
 	year = {2014}
 }
 
