--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-%Final checks: 
+%Final checks:
 % Margins
 % Search for ?? in the pdf
 
@@ -8,40 +8,40 @@
 
 \documentclass[output=book,nonflat,modfonts,
 % colorlinks,citecolor=brown,
-%  draft
+ draft
 % ,draftmode
-		  ]{langsci/langscibook}     
-  
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
-%%%          additional packages                 %%% 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
-\input{localmetadata.tex} 
+		  ]{langsci/langscibook}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%          additional packages                 %%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\input{localmetadata.tex}
 \input{localpackages.tex}
 \input{localhyphenation.tex}
-\input{localcommands.tex} 
+\input{localcommands.tex}
 \addbibresource{localbibliography.bib}
 
-% \includeonly{chapters/06}
+\includeonly{chapters/03}
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
-%%%             Frontmatter                      %%% 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
-\begin{document} 
-\maketitle   %create title page              
-\frontmatter 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%             Frontmatter                      %%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\begin{document}
+\maketitle   %create title page
+\frontmatter
 % \include{chapters/dedication}
 
 \currentpdfbookmark{Contents}{name} % adds a PDF bookmark
- 
+
 {\sloppy\tableofcontents}
 
 \include{chapters/preface}
 \include{chapters/acknowledgments}
-\include{chapters/abbreviations} 
-\include{chapters/notation} 
+\include{chapters/abbreviations}
+\include{chapters/notation}
 
 
-\mainmatter     
+\mainmatter
 
 %%%%%%The content of chapters/00 can be ignored
 % % \include{chapters/00}
@@ -53,6 +53,6 @@
 \include{chapters/05}
 \include{chapters/06}
 
-% \input{localseealso.tex}  
+% \input{localseealso.tex}
 {\sloppy\input{backmatter.tex}}
 \end{document}
