retypeset after tree changes

--- a/main.tex
+++ b/main.tex
@@ -8,7 +8,7 @@
 
 \documentclass[output=book,nonflat,modfonts,
 % colorlinks,citecolor=brown,
- draft
+%  draft
 % ,draftmode
 		  ]{langsci/langscibook}
 
@@ -21,7 +21,7 @@
 \input{localcommands.tex}
 \addbibresource{localbibliography.bib}
 
-\includeonly{chapters/03}
+% \includeonly{chapters/06}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%             Frontmatter                      %%%
