--- a/localmetadata.tex
+++ b/localmetadata.tex
@@ -1,10 +1,10 @@
 \author{Fabian Bross} %look no further, you can change those things right here.
-\title{The clausal syntax of German Sign Language}  
+\title{The clausal syntax of German Sign Language}
 \subtitle{A cartographic approach}
 % \BackTitle{Change your backtitle in localmetadata.tex} % Change if BackTitle is different from Title
 
 \renewcommand{\lsSeries}{ogs} % use lowercase acronym, e.g. sidl, eotms, tgdi
-\renewcommand{\lsSeriesNumber}{5} 
+\renewcommand{\lsSeriesNumber}{5}
 
 \BackBody{This book presents a hypothesis-based description of the clausal structure of German Sign Language (DGS). The structure of the book is based on the three clausal layers CP, IP/TP, and VoiceP. The main hypothesis is that scopal height is expressed iconically in sign languages: the higher the scope of an operator, the higher the articulator used for its expression. The book was written with two audiences in mind: On the one hand it addresses linguists interested in sign languages and on the other hand it addresses cartographers.}
 
@@ -19,9 +19,21 @@
 \end{center}
 \vfill}
 %\typesetter{Change typesetter in localmetadata.tex}
-%\proofreader{Change proofreaders in localmetadata.tex}
+\proofreader{
+Amir Ghorbanpour,
+Andreas Hölzl,
+Aniefon Daniel,
+Ivelina Stoyanova,
+Jeroen van de Weijer,
+Daniela Hanna-Kolbe,
+Lachlan Mackenzie,
+Jean Nitzke,
+Simon Cozens,
+Tom Bossuyt,
+Vadim Kimmelman
+}
 
 \renewcommand{\lsID}{256} % contact the coordinator for the right number
 \BookDOI{10.5281/zenodo.3560718}%ask coordinator for DOI
 \renewcommand{\lsISBNdigital}{978-3-96110-218-1}
-\renewcommand{\lsISBNhardcover}{978-3-96110-219-8} 
+\renewcommand{\lsISBNhardcover}{978-3-96110-219-8}
