fix footnotes sidenote 1.2

--- a/main.tex
+++ b/main.tex
@@ -21,7 +21,7 @@
 \input{localcommands.tex}
 \addbibresource{localbibliography.bib}
 
-% \includeonly{chapters/06}
+\includeonly{chapters/01}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%             Frontmatter                      %%%
