--- a/main.tex
+++ b/main.tex
@@ -21,7 +21,7 @@
 \input{localcommands.tex}
 \addbibresource{localbibliography.bib}
 
-\includeonly{chapters/01}
+% \includeonly{chapters/03}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%             Frontmatter                      %%%
